FIX: Sol all fix